--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,7 +11,7 @@
 
   %body
     -# = Gon::Base.render_data
-    .main-container.container-fluid
+    .main-container.container-fluid{style: "margin: 0; padding: 0;"}
       .page-content
         = yield
 
