--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -1,18 +1,23 @@
 .page-body{style: "background: transparent;"}
-  %nav.navbar.navbar-default.landing_navbar.navbar-custom
-    .container-fluid
-      .row
-        .col-sm-12
-          .col-sm-8
-          .col-sm-2
-            %btn.btn.btn-primary.btn-md
-              LOG IN
-          .col-sm-2
-            %btn.btn.btn-default.btn-md
-              SIGN UP
-  .row
-    .wizzard-container
-      .well.with-header
-        %h3.grey-text
-          Hello
-    
+  = render partial: "pages/navigation_bar"
+  %div{style: "width: 100%; height: 700px; background: #ccc;"}
+    .row.padding-top-30
+      %div.margin-auto{style: "width: 640px; height: 400px; background: #fff;"}
+        %h3.margin-top-30.text-center
+          Welcome
+        %hr
+  
+  %div{id: "features", style: "width: 100%;"}
+    %div{style: "width: 80%; margin: auto;"}
+      %h2.margin-top-30.text-grey
+        Manage Your Library With Ease
+      %hr
+      %p.margin-left-5
+        Lorem ipsum auto generated text
+
+      %h2.margin-top-30.text-grey
+        User Accounts
+      %hr
+      %p.margin-left-5
+        - User.all.each do |user|
+          = "Attributes: #{user.attributes}"
